# mevzuat-mcp

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  app.py  article_search.py  asgi_app.py  bedesten_client.py  bedesten_models.py  fastmcp.json  fly.toml  mevzuat_client.py  mevzuat_client_new.py  mevzuat_mcp_server.py  mevzuat_mcp_server_new.py  mevzuat_models.py  pyproject.toml  requirements-mcp.txt  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml
data/semantic_index/: 103039.json  103039.npy  TEST1234.json  TEST1234.npy  test_123.json  test_123.npy  test_fixed_001.json  test_fixed_001.npy
semantic_search/: __init__.py  cache.py  embedder.py  processor.py  vector_store.py
