[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mevzuat-mcp"
version = "0.1.0"
description = "MCP Server for Turkish Legislation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Said Surucu", email = "saidsrc@gmail.com"}
]
keywords = ["mcp", "mevzuat", "turkish-law", "legislation", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "fastmcp>=2.10.5",
    "pydantic==2.11.7",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "markitdown>=0.1.1",
]

[project.urls]
"Homepage" = "https://github.com/saidsurucu/mevzuat-mcp"
"Bug Tracker" = "https://github.com/saidsurucu/mevzuat-mcp/issues"
"Repository" = "https://github.com/saidsurucu/mevzuat-mcp"

[project.scripts]
mevzuat-mcp = "mevzuat_mcp_server:main"

[tool.setuptools]
py-modules = ["mevzuat_mcp_server", "mevzuat_client", "mevzuat_models"]