[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mevzuat-mcp"
version = "1.0.0"
description = "MCP Server for Turkish Legislation - 18 tools for comprehensive access to Turkish laws, decrees, regulations and circulars"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Said Surucu", email = "saidsrc@gmail.com"}
]
keywords = ["mcp", "mevzuat", "turkish-law", "legislation", "claude", "llm", "kanun", "khk", "tuzuk", "yonetmelik"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "fastmcp>=2.12.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "markitdown[pdf]==0.1.3",
    "playwright==1.55.0",
    "mistralai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.urls]
"Homepage" = "https://github.com/saidsurucu/mevzuat-mcp"
"Bug Tracker" = "https://github.com/saidsurucu/mevzuat-mcp/issues"
"Repository" = "https://github.com/saidsurucu/mevzuat-mcp"

[project.scripts]
mevzuat-mcp = "mevzuat_mcp_server:main"

[tool.setuptools]
py-modules = ["mevzuat_mcp_server", "mevzuat_client", "mevzuat_models", "article_search"]
